// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid Test GifGrid test snapshoot 1`] = `
<Fragment>
  <h3>
    category
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`GifGrid Test debe mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    category
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="ABC"
      url="https://localhost/img.jpg"
    />
  </div>
</Fragment>
`;
